--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,10 @@
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
       </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
